A stub for KFoldCrossValidation and the first plugin for game: GAMESSP